# WhisperType

./: .gitignore  CLAUDE.md  WhisperType.spec  build.bat  pyproject.toml  requirements.txt  run.bat
.github/workflows/: build.yml
packaging/: build_appimage.sh  build_dmg.sh  inno_setup.iss  whispertype_linux.spec  whispertype_macos.spec  whispertype_windows.spec
voice_app/: __init__.py  __main__.py  config.json  main.py
voice_app/config/: settings.py
voice_app/services/: focus_manager.py  recorder.py  text_injector.py  transcriber.py
voice_app/services/platform/: __init__.py  _sound.py  base.py  linux.py  macos.py  windows.py
voice_app/ui/: overlay_window.py
whisper_live_app/: __init__.py  __main__.py  app.py  config.json  overlay.py
whisper_live_app/core/: config.py  text_injector.py  transcriber.py
whisper_live_app/ui/: overlay_window.py
